depoly/infra/nginx/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: nginx
  ports:
    - name: redis-tcp-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
